[package]
name = "wait-for-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["kv_unstable"] }
structopt = "0.3"
env_logger = "0.11.3"
thiserror = "1.0.59"
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
